# disco-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml
examples/: movielens.cpp
include/: disco.hpp
test/: main.cpp
